--- a/src/oodj_assignment/GUI_Sales_Manager.form
+++ b/src/oodj_assignment/GUI_Sales_Manager.form
@@ -37,9 +37,9 @@
                               <Component id="buttonDaily_item_wise_sales_entry" max="32767" attributes="0"/>
                               <Component id="buttonSupplier_entry" max="32767" attributes="0"/>
                               <Component id="buttonItem_entry" alignment="0" max="32767" attributes="0"/>
-                              <Component id="buttonPRPO" alignment="0" max="32767" attributes="0"/>
+                              <Component id="buttonPRPO" alignment="0" pref="227" max="32767" attributes="0"/>
                               <Component id="buttonMy_profile" max="32767" attributes="0"/>
-                              <Component id="buttonLogout" min="-2" pref="227" max="-2" attributes="0"/>
+                              <Component id="buttonLogout" alignment="1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
@@ -57,17 +57,17 @@
               <Component id="Sales_manager" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="buttonItem_entry" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="buttonSupplier_entry" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="buttonDaily_item_wise_sales_entry" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
               <Component id="buttonPRPO" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="buttonMy_profile" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="buttonLogout" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="52" max="32767" attributes="0"/>
+              <EmptySpace pref="23" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
